<resources>
    <string name="app_name">Cypper</string>
    <string name="title_home">Home</string>
    <string name="title_home_markets">Markets</string>
    <string name="search_coins">Search coins…</string>
    <string name="hero_spotlight_name">Bitcoin</string>
    <string name="hero_spotlight_symbol">BTC · 7d</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">News</string>
    <string name="crypto_name">Name</string>
    <string name="crypto_symbol">Symbol</string>
    <string name="crypto_rank">Rank</string>
    <string name="crypto_category">Category</string>
    <string name="crypto_platform">Platform</string>
    <string name="crypto_description">Description : %s</string>
    <string name="crypto_price">Price</string>
    <string name="crypto_about">About</string>
    <string name="crypto_24h_change">24h change</string>
    <string name="remove_from_favorites">Remove</string>
    <string name="save_to_favorites">Save</string>
    <string name="first_fragment_text">Welcome to the Cypper app. You can add the cryptocurrencies you want to follow closely to your favorites and control them with a single click.</string>
    <string name="first_fragment_title">Cypper</string>
    <string name="first_fragment_button_text">Next</string>
    <string name="favorites_fragment_text">Favorites</string>
    <string name="error_try_again">Error! Try Again</string>
    <string name="save">Save</string>
</resources>